changed logo image back to png version because of sizing issues on firefox

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -1864,7 +1864,8 @@ body.is-preload #sidebar nav ul li {
   display: block;
   margin-left: auto;
   margin-right: auto;
-  width: 50%;
+  width: 90%;
+  height: auto;
 }
 
 #case-study p {
